<resources>
    <string name="app_name">FirebaseLoginDemo</string>
    <string name="no_text" />
    <string name="email_text">Email</string>
    <string name="password_hint">Password</string>
    <string name="button_text">Login</string>
    <string name="sign_up_text">Sign up</string>
    <string name="sign_up_button">Sign up</string>
    <string name="login_text">Login</string>
    <string name="country_location">Country Location</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_names">Profile Names</string>
    <string name="kayleigh_smile">Kayleigh Smile</string>
    <string name="menu_profile">Menu Profile</string>
    <string name="menu_chat">Menu Chat</string>
    <string name="menu_contact">Menu Contact</string>
    <string name="menu_online">Menu Online</string>
    <string name="menu_settings">Menu Settings</string>
    <string name="action_settings">Action Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="edit_profile_name">Edit profile name</string>
    <string name="edit_profile_country">Edit Profile Country</string>
</resources>
