<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context ="com.example.codetribe.firebaselogindemo.SignUpActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_32sdp"
        android:src="@drawable/kpt2" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo"
        android:layout_marginTop="@dimen/_56sdp"
        android:padding="@dimen/_8sdp"
        android:text="@string/no_text"
        android:textColor="@color/colorAccent" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_error"
        android:background="@drawable/bottom_border"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/_8sdp"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:background="@drawable/bottom_border"
        android:hint="@string/password_hint"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/_8sdp"
        android:singleLine="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_up_button"
        android:paddingBottom="@dimen/_16sdp"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/_8sdp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:layout_marginTop="@dimen/_24sdp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/login_text"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>